--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous" rel="stylesheet" />
     <!--Favicon-->
     <link rel="shortcut icon" type="image/x-icon" href="https://codeinstitute.s3.amazonaws.com/fullstack/12-javaScript-essentials/favicon.ico" />
-    <title>Love Maths</title>
+    <title>Love Maths!</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
